src/test/ui/issues/issue-17718-static-move.stderr
error[E0507]: cannot move out of a shared reference
  --> $DIR/issue-17718-static-move.rs:6:14
   |
LL |     let _a = FOO;
   |              ^^^
   |              |
   |              move occurs because value has type `Foo`, which does not implement the `Copy` trait
   |              help: consider borrowing here: `&FOO`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
